--- a/Advocacy_Software.csproj
+++ b/Advocacy_Software.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <PackageReference Include="itext7" Version="7.2.5" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+    <PackageReference Include="MySqlConnector" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
